[package]
name = "tu_mmmh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
tokio = {version = "1.24.2", features = ["full"]}
reqwest = {version = "0.11.13", features = ["json", "rustls-tls"],  default-features = false}
chrono = "0.4.23"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "1.0.91"
dotenv = "0.15.0"
